.golden/-559153311506421916/golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:33:
  |
7 | main = putStrLn [fmt|{hello:=100s}|]
  |                                 ^
String type is incompatible with inside padding (=).

    • In the quasi-quotation: [fmt|{hello:=100s}|]
  |
7 | main = putStrLn [fmt|{hello:=100s}|]
  |                      ^^^^^^^^^^^^^^^
